--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             </div>
           </a>
 
-          <a href="#" class="card">
+          <a href="./pages_restaurants/La-note-enchantee.html" class="card">
             <div class="btn_card">
               <span class="new"> Nouveau </span>
             </div>
@@ -82,7 +82,7 @@
             </div>
           </a>
 
-          <a href="#" class="card">
+          <a href="./pages_restaurants/A-la-francaise.html" class="card">
             <div class="btn_card">
               <span class="new"> Nouveau </span>
             </div>
@@ -92,7 +92,7 @@
               <p>Cité Rouge</p>
             </div>
           </a>
-          <a href="#" class="card">
+          <a href="./pages_restaurants/Le-delice-des-sens.html" class="card">
             <div class="btn_card">
               <span class="new"> Nouveau </span>
             </div>
