--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
     ></script>
     <link rel="stylesheet" href="style.css" />
   </head>
+  <div class="loader">
+    <div class="loader_itemContainer">
+      <div class="loader_item loader_item-1"></div>
+      <div class="loader_item loader_item-2"></div>
+      <div class="loader_item loader_item-3"></div>
+    </div>
+  </div>
+
   <body id="homepage">
-  <!-- <div class="loader">
-      <div class="loader_itemContainer">
-      </div>
-        <div class="loader_item loader_item-1"></div>
-        <div class="loader_item loader_item-2"></div>
-        <div class="loader_item loader_item-3"></div>-->
-      
-    </div> 
     <header>
       <h1>ohmyfood</h1>
     </header>
@@ -33,10 +33,8 @@
       <section class="explorer">
         <h2>Réservez le menu qui<br />vous convient</h2>
         <p>Découvrez des restaurants d'exception, séléctionnés par nos soins</p>
-        <button>
-          Explorer nos restaurants</button>
-          <div class="gradient"></div>
-        
+        <button>Explorer nos restaurants</button>
+        <div class="gradient"></div>
       </section>
       <!--SECTION 2 WORK -->
       <section class="work">
@@ -122,4 +120,3 @@
     </footer>
   </body>
 </html>
-
